--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">careervista</string>
+    <string name="APIKey">qdjb8p3gs2wvj342</string>
+    <string name="token">sandbox_x6ffqwjg_hfmc2kjwttt653tg</string>
 </resources>
